--- a/SVRDroughtPrediction200k.ipynb
+++ b/SVRDroughtPrediction200k.ipynb
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "TaGH6jDyo1yd"
       },
@@ -56,7 +56,7 @@
         "id": "tCmSpV-FrBAm",
         "outputId": "784fa5f9-ed1d-46da-d846-136b2d86aaa5"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -81,7 +81,7 @@
           "height": 635
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1298,7 +1298,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4908,6 +4908,65 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**ACTUAL CODE AND TESTING STARTS HERE**"
+      ],
+      "metadata": {
+        "id": "RXlNB87z-whw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import seaborn as sns\n",
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
+        "from datetime import datetime"
+      ],
+      "metadata": {
+        "id": "yFe8SlJr-3eF"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "AykfU_bh-7T1",
+        "outputId": "50ee4f93-c7e2-49ec-a6cf-8d707e3694c9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dataset = pd.read_csv(\"/content/drive/MyDrive/DroughtCastAI/Dataset/Processed_Datasets/CMIP6_processed_dataset_200km_version2_1_month_lag.csv\")"
+      ],
+      "metadata": {
+        "id": "03F1u4Rw_c2y"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [
         "from sklearn.model_selection import train_test_split\n",
@@ -4916,7 +4975,7 @@
       "metadata": {
         "id": "DKHMRKOHgLEF"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -4932,7 +4991,7 @@
       "metadata": {
         "id": "vCabLM-tPS7_"
       },
-      "execution_count": 8,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -4942,12 +5001,12 @@
       ],
       "metadata": {
         "id": "Y4bG3y1s9jV0",
-        "outputId": "67bc979b-930a-402b-d77a-12dddf8fed81",
+        "outputId": "bb9f7366-7f49-4d11-ddab-44951a34c4a3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -4958,11 +5017,11 @@
             "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m122.7/122.7 kB\u001b[0m \u001b[31m3.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hCollecting daal4py==2024.0.1 (from scikit-learn-intelex)\n",
             "  Downloading daal4py-2024.0.1-py310-none-manylinux1_x86_64.whl (10.0 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m10.0/10.0 MB\u001b[0m \u001b[31m38.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m10.0/10.0 MB\u001b[0m \u001b[31m37.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: scikit-learn>=0.22 in /usr/local/lib/python3.10/dist-packages (from scikit-learn-intelex) (1.2.2)\n",
             "Collecting daal==2024.0.1 (from daal4py==2024.0.1->scikit-learn-intelex)\n",
             "  Downloading daal-2024.0.1-py2.py3-none-manylinux1_x86_64.whl (76.0 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m76.0/76.0 MB\u001b[0m \u001b[31m21.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m76.0/76.0 MB\u001b[0m \u001b[31m22.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: numpy>=1.19 in /usr/local/lib/python3.10/dist-packages (from daal4py==2024.0.1->scikit-learn-intelex) (1.23.5)\n",
             "Requirement already satisfied: tbb==2021.* in /usr/local/lib/python3.10/dist-packages (from daal==2024.0.1->daal4py==2024.0.1->scikit-learn-intelex) (2021.11.0)\n",
             "Requirement already satisfied: scipy>=1.3.2 in /usr/local/lib/python3.10/dist-packages (from scikit-learn>=0.22->scikit-learn-intelex) (1.11.4)\n",
@@ -4982,12 +5041,12 @@
       ],
       "metadata": {
         "id": "epBVh_PE9S24",
-        "outputId": "323b8829-4e85-4ab8-e40d-9fe38082786f",
+        "outputId": "1aecdd73-bffe-4eef-d016-4a96ef8c87bd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -5001,6 +5060,41 @@
     {
       "cell_type": "code",
       "source": [
+        "dataset.columns"
+      ],
+      "metadata": {
+        "id": "-Azsmuz8AIuR",
+        "outputId": "24590b53-5b08-4845-ef47-f8b98b477ba9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['Unnamed: 0', 'Month', 'Lat', 'Lon', 'temperature_2m',\n",
+              "       'temperature_2m_min', 'temperature_2m_max', 'dewpoint_temperature_2m',\n",
+              "       'total_precipitation_sum', 'total_precipitation_min',\n",
+              "       'total_precipitation_max', 'u_component_of_wind_10m',\n",
+              "       'v_component_of_wind_10m', 'surface_net_solar_radiation_sum',\n",
+              "       'total_evaporation_sum', 'soil_moisture_am', 'soil_moisture_pm', 'NDVI',\n",
+              "       'EVI', 'next_month_tempreature', 'next_month_precipitation', 'spei01',\n",
+              "       'spei03', 'datetime', 'year', 'month2', 'next_month_soil_moisture_am',\n",
+              "       'next_month_spei01'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# 4. Split data into features (X) and target (y)\n",
         "X = dataset[['Lat', 'Lon', 'temperature_2m',\n",
         "       'temperature_2m_min', 'temperature_2m_max', 'dewpoint_temperature_2m',\n",
@@ -5008,13 +5102,13 @@
         "       'total_precipitation_max', 'u_component_of_wind_10m',\n",
         "       'v_component_of_wind_10m', 'surface_net_solar_radiation_sum',\n",
         "       'total_evaporation_sum', 'soil_moisture_am', 'soil_moisture_pm', 'NDVI',\n",
-        "       'EVI', 'next_month_tempreature', 'next_month_precipitation', 'year', 'month2']]\n",
-        "y = dataset['spei01']"
+        "       'EVI', 'next_month_tempreature', 'next_month_precipitation', 'spei01']]\n",
+        "y = dataset['next_month_spei01']"
       ],
       "metadata": {
         "id": "Rfb2Mi0IJ8YM"
       },
-      "execution_count": 7,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -5078,7 +5172,7 @@
         },
         "outputId": "fa5fbcae-3a03-4b61-9d76-ae9434aa5c71"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5111,23 +5205,23 @@
     {
       "cell_type": "code",
       "source": [
-        "processed_dataset = pd.read_csv(\"/content/drive/MyDrive/DroughtCastAI/Dataset/Processed_Datasets/CMIP6_processed_dataset_200km.csv\")\n",
-        "X = processed_dataset[['Lat', 'Lon', 'temperature_2m',\n",
-        "       'temperature_2m_min', 'temperature_2m_max', 'dewpoint_temperature_2m',\n",
-        "       'total_precipitation_sum', 'total_precipitation_min',\n",
-        "       'total_precipitation_max', 'u_component_of_wind_10m',\n",
-        "       'v_component_of_wind_10m', 'surface_net_solar_radiation_sum',\n",
-        "       'total_evaporation_sum', 'soil_moisture_am', 'soil_moisture_pm', 'NDVI',\n",
-        "       'EVI', 'next_month_tempreature', 'next_month_precipitation', 'year', 'month2']]\n",
-        "\n",
-        "y = processed_dataset['spei01']\n",
-        "\n",
-        "# X = processed_dataset[['Lat', 'Lon', 'temperature_2m','dewpoint_temperature_2m',\n",
-        "#        'total_precipitation_sum', 'u_component_of_wind_10m',\n",
+        "# processed_dataset = pd.read_csv(\"/content/drive/MyDrive/DroughtCastAI/Dataset/Processed_Datasets/CMIP6_processed_dataset_200km.csv\")\n",
+        "# X = processed_dataset[['Lat', 'Lon', 'temperature_2m',\n",
+        "#        'temperature_2m_min', 'temperature_2m_max', 'dewpoint_temperature_2m',\n",
+        "#        'total_precipitation_sum', 'total_precipitation_min',\n",
+        "#        'total_precipitation_max', 'u_component_of_wind_10m',\n",
         "#        'v_component_of_wind_10m', 'surface_net_solar_radiation_sum',\n",
-        "#        'total_evaporation_sum', 'soil_moisture', 'NDVI',\n",
+        "#        'total_evaporation_sum', 'soil_moisture_am', 'soil_moisture_pm', 'NDVI',\n",
         "#        'EVI', 'next_month_tempreature', 'next_month_precipitation', 'year', 'month2']]\n",
+        "\n",
         "# y = processed_dataset['spei01']\n",
+        "\n",
+        "# # X = processed_dataset[['Lat', 'Lon', 'temperature_2m','dewpoint_temperature_2m',\n",
+        "# #        'total_precipitation_sum', 'u_component_of_wind_10m',\n",
+        "# #        'v_component_of_wind_10m', 'surface_net_solar_radiation_sum',\n",
+        "# #        'total_evaporation_sum', 'soil_moisture', 'NDVI',\n",
+        "# #        'EVI', 'next_month_tempreature', 'next_month_precipitation', 'year', 'month2']]\n",
+        "# # y = processed_dataset['spei01']\n",
         "\n",
         "gamma=0.05\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
@@ -5135,7 +5229,7 @@
       "metadata": {
         "id": "kyCsaiHJPtHz"
       },
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -5146,9 +5240,9 @@
         "svr_model = SVR(kernel='rbf',  gamma=gamma, verbose=True)\n",
         "\n",
         "parameters = {\n",
-        "    'gamma': [0.01, 0.1, 1],\n",
+        "    'gamma': [0.01, 0.05, 0.1, 1, 5, 10],\n",
         "    'kernel': ['rbf', 'sigmoid'],\n",
-        "    'C':[1,10,100,1000]\n",
+        "    'C':[0.01, 0.05, 0.1, 0.5, 1, 10, 100, 200, 500, 1000]\n",
         "    # ... add other hyperparameters as needed\n",
         "}\n",
         "\n",
@@ -5181,7 +5275,7 @@
       ],
       "metadata": {
         "id": "f-Gr_IUwRXG3",
-        "outputId": "5b7d9b14-78aa-4df9-f454-a44dca94c472",
+        "outputId": "b610152d-f1bb-400f-8d4e-247b5ca6ad62",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -5192,8 +5286,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Fitting 5 folds for each of 24 candidates, totalling 120 fits\n",
-            "[LibSVM]"
+            "Fitting 5 folds for each of 120 candidates, totalling 600 fits\n"
           ]
         }
       ]
