--- a/RandomForestTestDroughtPrediction200k.ipynb
+++ b/RandomForestTestDroughtPrediction200k.ipynb
@@ -5219,18 +5219,18 @@
       ],
       "metadata": {
         "id": "fDqkU_og7ksL",
-        "outputId": "a9546b09-c241-4822-8953-25435d8e9da8",
+        "outputId": "7f503570-7762-4ee4-b78b-ec34b7330f24",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ]
@@ -5247,7 +5247,7 @@
       "metadata": {
         "id": "svBHAzEb7dHW"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -5260,7 +5260,7 @@
       "metadata": {
         "id": "DKHMRKOHgLEF"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -5271,7 +5271,7 @@
       "metadata": {
         "id": "-3LUPjU373C6"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -5281,12 +5281,12 @@
       ],
       "metadata": {
         "id": "1POtjFSN8Hjg",
-        "outputId": "09569642-ac6c-46cd-94f8-f4ad464fa8f4",
+        "outputId": "16073286-24c5-48b7-d168-16dcef5e49a2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5305,7 +5305,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 17
         }
       ]
     },
@@ -5334,7 +5334,7 @@
       "metadata": {
         "id": "Rfb2Mi0IJ8YM"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -5344,15 +5344,21 @@
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
         "\n",
         "# 6. Initialize and train the Random Forest regressor\n",
-        "rf_regressor = RandomForestRegressor(n_estimators=100, random_state=42, verbose = 2)\n",
+        "rf_regressor = RandomForestRegressor(n_estimators=100, random_state=42, verbose = 2, max_depth = 20)\n",
         "rf_regressor.fit(X_train, y_train)\n",
+        "\n",
+        "y_pred_train = rf_regressor.predict(X_train)\n",
+        "\n",
+        "#Training Accuracy:\n",
+        "train_mse = mean_squared_error(y_train, y_pred_train)\n",
+        "print(f\"Train Mean Squared Error: {train_mse}\")\n",
         "\n",
         "# 7. Predict on the test set\n",
         "y_pred = rf_regressor.predict(X_test)\n",
         "\n",
         "# 8. Evaluate the model\n",
-        "mse = mean_squared_error(y_test, y_pred)\n",
-        "print(f\"Mean Squared Error: {mse}\")\n",
+        "test_mse = mean_squared_error(y_test, y_pred)\n",
+        "print(f\"Test Mean Squared Error: {test_mse}\")\n",
         "\n",
         "# 9. Use the model for new predictions (if necessary)\n",
         "# new_data = [[____NEW_FEATURE_1_VALUE____, ____NEW_FEATURE_2_VALUE____, ____...____]]\n",
@@ -5364,9 +5370,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "49QV9ygTKtEi",
-        "outputId": "896e349c-2ab9-44b2-90de-0a2e8431b39a"
+        "outputId": "fca0edec-cf08-4fe6-f7c0-7c1239c76f34"
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -5418,7 +5424,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "[Parallel(n_jobs=1)]: Done  40 tasks      | elapsed:  1.1min\n"
+            "[Parallel(n_jobs=1)]: Done  40 tasks      | elapsed:   54.5s\n"
           ]
         },
         {
@@ -5491,14 +5497,28 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "[Parallel(n_jobs=1)]: Done  40 tasks      | elapsed:    0.3s\n"
+            "[Parallel(n_jobs=1)]: Done  40 tasks      | elapsed:    0.6s\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mean Squared Error: 1.001950733678458\n"
+            "Train Mean Squared Error: 0.002882239107781296\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[Parallel(n_jobs=1)]: Done  40 tasks      | elapsed:    0.2s\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Test Mean Squared Error: 0.010416056141036387\n"
           ]
         }
       ]
@@ -5577,7 +5597,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "metadata": {
